# nft-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  REUSE.toml  clippy.toml  config.development.json  config.example.json  deny.toml  docker-compose.dev.yml  docker-compose.prod.yml  justfile  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  conventional_commits.yml  dco_checker.yml  docker.yml  release.yml  reuse.yml  security.yml
assets/configs/: models.yaml  test_multi_chain.yaml
assets/prompts/: ft_prompt.json  ft_prompt.json.license  test_contracts.json
crates/api/: Cargo.toml
crates/api-client/: Cargo.toml
crates/api-client/src/: health.rs  lib.rs  types.rs
crates/api/src/: config.rs  dependencies.rs  docs.rs  error.rs  extractors.rs  handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  openapi.rs  routes.rs  server.rs  state.rs
crates/api/src/routes/: handlers.rs
crates/api/tests/: contract_status.rs
crates/api/tests/fixtures/: chains.rs  mod.rs
crates/external-apis/: Cargo.toml
crates/external-apis/src/: cache.rs  lib.rs  moralis.rs  non_empty_string.rs  pinax.rs  registry.rs
crates/external-apis/tests/: fixtures.rs  moralis_tests.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: chains.rs  lib.rs  spam_status.rs
crates/spam-predictor/: Cargo.toml
crates/spam-predictor/src/: cache.rs  config.rs  error.rs  lib.rs  openai.rs  predictor.rs  types.rs
