# SPDX-FileCopyrightText: 2025 Semiotic Labs
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "Apache-2.0"
authors = ["Semiotic Labs"]
homepage = "https://github.com/semiotic-ai/nft-api"
repository = "https://github.com/semiotic-ai/nft-api"
description = "NFT API service for blockchain token management"
keywords = ["nft", "blockchain", "api", "tokens", "web3"]
categories = ["web-programming", "cryptography"]

[workspace.dependencies]
alloy-primitives = { version = "1.3.0", features = ["serde"] }
anyhow = "1.0.98"
api-client = { path = "crates/api-client" }
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.13"
external-apis = { path = "crates/external-apis" }
hyper = "1.6.0"
mockall = "0.13.1"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = "1.47.1"
tokio-test = "0.4.4"
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.2.0"
wiremock = "0.6.4"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unused_must_use = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
non_ascii_idents = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"
unwrap_used = "deny"
panic = "deny"
cognitive_complexity = "allow"
too_many_arguments = "warn"
type_complexity = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "warn"
unused_self = "allow"
redundant_test_prefix = "deny"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
