# SPDX-FileCopyrightText: 2025 Semiotic Labs
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
anyhow.workspace = true
api-client = { workspace = true }
axum = { workspace = true, features = ["macros", "tracing"] }
chrono = { workspace = true }
config = { workspace = true }
external-apis = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared-types.workspace = true
spam-predictor = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "timeout", "trace", "request-id"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio-test = { workspace = true }

[lints]
workspace = true
