# SPDX-FileCopyrightText: 2025 Semiotic Labs
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "spam-predictor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "AI-powered NFT contract spam prediction using fine-tuned models"
keywords = ["nft", "spam", "ai", "prediction", "openai"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Workspace dependencies
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
api-client = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# Crate-specific dependencies
dashmap = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "fs"] }
tokio-retry = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
